[github] add toml-parse JS and Native testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,4 @@ jobs:
         cache: sbt
     - name: Test toml/parse
       working-directory: code
-      run: sbt -v "toml-parseJVM/test"
+      run: sbt -v "toml-parseJVM/test" "toml-parseJS/test" "toml-parseNative/test"
